--- a/Makefile.am
+++ b/Makefile.am
@@ -1,52 +1,38 @@
-SUBDIRS =
+#SUBDIRS =
 
-AM_LDFLAGS =
-
+#AM_LDFLAGS =
+AM_CPPFLAGS =
+AM_CFLAGS   = -O2 $(OPENMP_CFLAGS)
+AM_CXXFLAGS = -O2 $(OPENMP_CFLAGS)
 
 bin_PROGRAMS =
 
 bin_PROGRAMS     += gs_seq gs_openmp
 
-gs_seq_SOURCES  = gs_seq.c
-gs_seq_CFLAGS   = -O2
-
+gs_seq_SOURCES    = gs_seq.c
 gs_openmp_SOURCES = gs_openmp.c
-gs_openmp_CFLAGS  = -O2 $(OPENMP_CFLAGS)
 
-
-# eigen-only sources
+#################################################
+# Eigen-only sources
 if HAVE_EIGEN
 
-bin_PROGRAMS += lu ldlt matprod
+AM_CPPFLAGS += $(EIGEN_INCLUDE)
+
+bin_PROGRAMS += lu ldlt matprod-r4 matprod-r8
 
 lu_SOURCES = lu.C
-lu_CXXFLAGS = $(EIGEN_INCLUDE) $(OPENMP_CXXFLAGS)
 
 ldlt_SOURCES = ldlt.C
-ldlt_CXXFLAGS = $(EIGEN_INCLUDE) $(OPENMP_CXXFLAGS)
 
-matprod_SOURCES = matprod.C
-matprod_CXXFLAGS = $(EIGEN_INCLUDE) $(OPENMP_CXXFLAGS)
+matprod_r4_SOURCES = matprod.C
+matprod_r4_CPPFLAGS = -DDATATYPE=float $(EIGEN_INCLUDE)
+
+matprod_r8_SOURCES = matprod.C
+matprod_r8_CPPFLAGS = -DDATATYPE=double $(EIGEN_INCLUDE)
 
 endif
+# end Eigen-only sources
+#################################################
 
 
-DISTCLEANFILES = *~ speedup_N*.pdf
-
-
-
-# #
-# # special things to do when running 'make clean/distclean'
-# clean-local:
-# 	rm -rf `find $(builddir) -type d -name "*.dSYM"`
-
-# ouput_files = test.*.xdr test.*.bin test.*.h5 test.*.fbin out_?.e
-# log_files   = slurm-*.out MPI-*.log
-
-# MOSTLYCLEANFILES = $(ouput_files) $(logfiles)
-
-# cleandata:
-# 	rm -f $(ouput_files)
-
-# cleanlogs:
-# 	rm -f $(log_files)
+DISTCLEANFILES = *~ speedup_*_N*.pdf
