--- a/configure.ac
+++ b/configure.ac
@@ -3,10 +3,10 @@
 # Infer the source directory as the path to the ./configure script
 
 AC_PREREQ([2.69])
-AC_INIT([omp_scaling],[0.0.1],[benjamin.kirk@nasa.gov])
-AC_MSG_RESULT(---------------------------------------------)
-AC_MSG_RESULT(-------- Configuring OpenMP Scaling ---------)
-AC_MSG_RESULT(---------------------------------------------)
+AC_INIT([programming_paradigms],[0.0.1],[benkirk@ucar.edu])
+AC_MSG_RESULT(----------------------------------------------------)
+AC_MSG_RESULT(-------- Configuring Programming Paradigms ---------)
+AC_MSG_RESULT(----------------------------------------------------)
 AC_CONFIG_SRCDIR([gs_openmp.c])
 AC_CONFIG_HEADERS([openmp_config.h])
 AC_CONFIG_AUX_DIR([build-aux])
@@ -21,18 +21,18 @@ top_srcdir=`dirname $0`
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
-AC_REQUIRE(AC_PROG_CC)
 AC_SEARCH_LIBS([ceil], [m], [], [AC_MSG_ERROR([unable to find the ceil() function]) ])
 
 
 AC_PROG_FC
 AC_FC_LIBRARY_LDFLAGS
 AC_FC_WRAPPERS
+AM_PROG_CC_C_O
 AM_PATH_PYTHON
 AC_ARG_VAR(PYTHONPATH, compile-time PYTHONPATH (e.g. for mpi4py))
 
 # Default to C++, and get OpenMP flags for all used languages
-AC_LANG(C++)
+AC_LANG([C++])
 AX_OPENMP
 AC_SUBST(OPENMP_CXXFLAGS)
 AC_LANG_PUSH([C])
