--- a/configure.ac
+++ b/configure.ac
@@ -24,10 +24,10 @@ AC_PROG_CC
 AC_SEARCH_LIBS([ceil], [m], [], [AC_MSG_ERROR([unable to find the ceil() function]) ])
 
 
-AC_PROG_FC
-AC_FC_LIBRARY_LDFLAGS
-AC_FC_WRAPPERS
-AM_PROG_CC_C_O
+#AC_PROG_FC
+#AC_FC_LIBRARY_LDFLAGS
+#AC_FC_WRAPPERS
+#AM_PROG_CC_C_O
 AM_PATH_PYTHON
 AC_ARG_VAR(PYTHONPATH, compile-time PYTHONPATH (e.g. for mpi4py))
 
